[metadata]
name = github-topics
version = 2019.02.24
url = https://github.com/looking-for-a-job/github-topics.py
classifiers = file: classifiers.txt
description = file: description.txt
long_description = file: pypi.md

[options]
install_requires = 
	PyGithub
	click
	public
	setuptools
packages = 
	github_topics
