# https://pypi.org/project/setupcfg-generator/
[metadata]
name = github-topics
version = 2019.3.22
url = https://github.com/looking-for-a-job/github-topics.py
classifiers = file: classifiers.txt
description = file: description.txt
long_description = file: README.md
long_description_content_type = text/markdown
keywords = github

[options]
install_requires = 
	PyGithub
	click
	public
	setuptools
packages = 
	github_topics
